[gd_scene load_steps=15 format=2]

[ext_resource path="res://src/controls/centered_panel.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/images/gui/game-over.png" type="Texture" id=2]
[ext_resource path="res://src/controls/full_screen_panel.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/controls/screens/game_over_screen.gd" type="Script" id=4]
[ext_resource path="res://src/intro_animation/stuck_animation_control.tscn" type="PackedScene" id=5]
[ext_resource path="res://src/controls/labeled_control_list.tscn" type="PackedScene" id=6]
[ext_resource path="res://assets/images/icons/go-icon-alternate.png" type="Texture" id=7]
[ext_resource path="res://assets/images/icons/retry-icon-normal.png" type="Texture" id=8]
[ext_resource path="res://assets/images/icons/home-icon-normal.png" type="Texture" id=9]
[ext_resource path="res://src/controls/shiny_button.tscn" type="PackedScene" id=10]
[ext_resource path="res://src/controls/accordion_panel.tscn" type="PackedScene" id=11]
[ext_resource path="res://src/level/rank_animator.tscn" type="PackedScene" id=12]
[ext_resource path="res://assets/images/icons/three-loop-icon-large.png" type="Texture" id=13]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.152941, 0.192157, 0.286275, 1 )
shadow_size = 8
shadow_offset = Vector2( -4, 4 )

[node name="GameOverScreen" type="Node2D"]
script = ExtResource( 4 )

[node name="FullScreenPanel" parent="." instance=ExtResource( 3 )]
margin_right = 480.0
margin_bottom = 480.0
custom_styles/panel = SubResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="FullScreenPanel"]
margin_right = 480.0
margin_bottom = 480.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 8.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenteredPanel" parent="FullScreenPanel/VBoxContainer" instance=ExtResource( 1 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 480.0
margin_bottom = 480.0
stretches_horizontally = false
stretches_vertically = true

[node name="ScrollContainer" type="ScrollContainer" parent="FullScreenPanel/VBoxContainer/CenteredPanel"]
margin_right = 480.0
margin_bottom = 480.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="CenterContainer" type="CenterContainer" parent="FullScreenPanel/VBoxContainer/CenteredPanel/ScrollContainer"]
margin_right = 470.0
margin_bottom = 659.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="FullScreenPanel/VBoxContainer/CenteredPanel/ScrollContainer/CenterContainer"]
margin_left = 55.0
margin_right = 415.0
margin_bottom = 659.0
rect_min_size = Vector2( 280, 0 )

[node name="Spacer6" type="Control" parent="FullScreenPanel/VBoxContainer/CenteredPanel/ScrollContainer/CenterContainer/VBoxContainer"]
margin_left = 180.0
margin_right = 180.0
margin_bottom = 30.0
rect_min_size = Vector2( 0, 30 )
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="LogoControl" type="Control" parent="FullScreenPanel/VBoxContainer/CenteredPanel/ScrollContainer/CenterContainer/VBoxContainer"]
margin_left = 180.0
margin_top = 34.0
margin_right = 180.0
margin_bottom = 81.0
rect_min_size = Vector2( 0, 47 )
size_flags_horizontal = 4
size_flags_vertical = 0

[node name="Title" type="TextureRect" parent="FullScreenPanel/VBoxContainer/CenteredPanel/ScrollContainer/CenterContainer/VBoxContainer/LogoControl"]
margin_left = -207.0
margin_right = 206.0
margin_bottom = 47.0
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource( 2 )
stretch_mode = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Spacer2" type="Control" parent="FullScreenPanel/VBoxContainer/CenteredPanel/ScrollContainer/CenterContainer/VBoxContainer"]
margin_left = 180.0
margin_top = 85.0
margin_right = 180.0
margin_bottom = 105.0
rect_min_size = Vector2( 0, 20 )
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Control2" type="Control" parent="FullScreenPanel/VBoxContainer/CenteredPanel/ScrollContainer/CenterContainer/VBoxContainer"]
margin_left = 180.0
margin_top = 109.0
margin_right = 180.0
margin_bottom = 349.0
rect_min_size = Vector2( 0, 240 )
size_flags_horizontal = 4
size_flags_vertical = 0
size_flags_stretch_ratio = 3.0

[node name="RankWrapper" type="Control" parent="FullScreenPanel/VBoxContainer/CenteredPanel/ScrollContainer/CenterContainer/VBoxContainer/Control2"]
size_flags_horizontal = 4
size_flags_vertical = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Node2D" type="Node2D" parent="FullScreenPanel/VBoxContainer/CenteredPanel/ScrollContainer/CenterContainer/VBoxContainer/Control2/RankWrapper"]
z_index = 1

[node name="RankAnimator" parent="FullScreenPanel/VBoxContainer/CenteredPanel/ScrollContainer/CenterContainer/VBoxContainer/Control2/RankWrapper/Node2D" instance=ExtResource( 12 )]
margin_left = 87.244
margin_top = 34.4178
margin_right = 87.244
margin_bottom = 34.4178
rank = 0
is_small = false
includes_random_delay = true

[node name="ThreeLoopIcon" type="TextureRect" parent="FullScreenPanel/VBoxContainer/CenteredPanel/ScrollContainer/CenterContainer/VBoxContainer/Control2/RankWrapper/Node2D"]
margin_left = -124.632
margin_top = 3.78024
margin_right = -60.632
margin_bottom = 67.7802
rect_pivot_offset = Vector2( 32, 32 )
texture = ExtResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StuckAnimationControl" parent="FullScreenPanel/VBoxContainer/CenteredPanel/ScrollContainer/CenterContainer/VBoxContainer/Control2" instance=ExtResource( 5 )]
margin_top = 120.0
margin_bottom = 120.0
rect_scale = Vector2( 4, 4 )
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Spacer3" type="Control" parent="FullScreenPanel/VBoxContainer/CenteredPanel/ScrollContainer/CenterContainer/VBoxContainer"]
margin_left = 180.0
margin_top = 353.0
margin_right = 180.0
margin_bottom = 363.0
rect_min_size = Vector2( 0, 10 )
size_flags_horizontal = 4
size_flags_vertical = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer2" type="VBoxContainer" parent="FullScreenPanel/VBoxContainer/CenteredPanel/ScrollContainer/CenterContainer/VBoxContainer"]
margin_top = 367.0
margin_right = 360.0
margin_bottom = 451.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UnlockedNewLevelLabel" type="Label" parent="FullScreenPanel/VBoxContainer/CenteredPanel/ScrollContainer/CenterContainer/VBoxContainer/VBoxContainer2"]
visible = false
margin_right = 280.0
margin_bottom = 28.0
custom_colors/font_color = Color( 1, 0.946, 0.46, 1 )
text = "You unlocked a new level!"
align = 1

[node name="ThreeLoopedLevelLabel" type="Label" parent="FullScreenPanel/VBoxContainer/CenteredPanel/ScrollContainer/CenterContainer/VBoxContainer/VBoxContainer2"]
visible = false
margin_top = 32.0
margin_right = 280.0
margin_bottom = 60.0
custom_colors/font_color = Color( 1, 0.946, 0.46, 1 )
text = "You three-looped the level!!"
align = 1

[node name="FinishedLevelLabel" type="Label" parent="FullScreenPanel/VBoxContainer/CenteredPanel/ScrollContainer/CenterContainer/VBoxContainer/VBoxContainer2"]
visible = false
margin_right = 280.0
margin_bottom = 28.0
custom_colors/font_color = Color( 1, 0.946, 0.46, 1 )
text = "You finished the level!"
align = 1

[node name="HighScoreLabel" type="Label" parent="FullScreenPanel/VBoxContainer/CenteredPanel/ScrollContainer/CenterContainer/VBoxContainer/VBoxContainer2"]
visible = false
margin_right = 280.0
margin_bottom = 28.0
custom_colors/font_color = Color( 1, 0.946, 0.46, 1 )
text = "That's a new high score!"
align = 1

[node name="TiersRemainingLabel" type="Label" parent="FullScreenPanel/VBoxContainer/CenteredPanel/ScrollContainer/CenterContainer/VBoxContainer/VBoxContainer2"]
visible = false
margin_right = 392.0
margin_bottom = 28.0
custom_colors/font_color = Color( 1, 0.946, 0.46, 1 )
text = "Try clearing X more tiers to finish the level!"
align = 1

[node name="DecreaseDifficultyButton" type="Button" parent="FullScreenPanel/VBoxContainer/CenteredPanel/ScrollContainer/CenterContainer/VBoxContainer/VBoxContainer2"]
margin_left = 80.0
margin_right = 280.0
margin_bottom = 40.0
rect_min_size = Vector2( 200, 40 )
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Decrease difficulty?"

[node name="IncreaseDifficultyButton" type="Button" parent="FullScreenPanel/VBoxContainer/CenteredPanel/ScrollContainer/CenterContainer/VBoxContainer/VBoxContainer2"]
margin_left = 80.0
margin_top = 44.0
margin_right = 280.0
margin_bottom = 84.0
rect_min_size = Vector2( 200, 40 )
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Increase difficulty?"

[node name="Spacer7" type="Control" parent="FullScreenPanel/VBoxContainer/CenteredPanel/ScrollContainer/CenterContainer/VBoxContainer"]
margin_left = 180.0
margin_top = 455.0
margin_right = 180.0
margin_bottom = 465.0
rect_min_size = Vector2( 0, 10 )
size_flags_horizontal = 4
size_flags_vertical = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AccordionPanel" parent="FullScreenPanel/VBoxContainer/CenteredPanel/ScrollContainer/CenterContainer/VBoxContainer" instance=ExtResource( 11 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 0.0
margin_top = 469.0
margin_right = 360.0
margin_bottom = 469.0
rect_min_size = Vector2( 360, 0 )
header_text = "Details from your climb"
is_caret_on_left = false
padding = Vector2( 16, 8 )

[node name="LabeledControlList" parent="FullScreenPanel/VBoxContainer/CenteredPanel/ScrollContainer/CenterContainer/VBoxContainer/AccordionPanel" instance=ExtResource( 6 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 4.0
margin_right = 360.0
margin_bottom = 284.0
rect_min_size = Vector2( 360, 0 )
row_height = 40.0
padding_horizontal = 8.0

[node name="Spacer5" type="Control" parent="FullScreenPanel/VBoxContainer/CenteredPanel/ScrollContainer/CenterContainer/VBoxContainer"]
margin_left = 180.0
margin_top = 473.0
margin_right = 180.0
margin_bottom = 493.0
rect_min_size = Vector2( 0, 20 )
size_flags_horizontal = 4
size_flags_vertical = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="FullScreenPanel/VBoxContainer/CenteredPanel/ScrollContainer/CenterContainer/VBoxContainer"]
margin_left = 116.0
margin_top = 497.0
margin_right = 244.0
margin_bottom = 625.0
size_flags_horizontal = 4
size_flags_vertical = 4
custom_constants/separation = 16
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SelectLevelButton" parent="FullScreenPanel/VBoxContainer/CenteredPanel/ScrollContainer/CenterContainer/VBoxContainer/VBoxContainer" instance=ExtResource( 10 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 128.0
margin_bottom = 56.0
rect_min_size = Vector2( 128, 56 )
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource( 7 )

[node name="HBoxContainer" type="HBoxContainer" parent="FullScreenPanel/VBoxContainer/CenteredPanel/ScrollContainer/CenterContainer/VBoxContainer/VBoxContainer"]
margin_top = 72.0
margin_right = 128.0
margin_bottom = 128.0
size_flags_horizontal = 4
size_flags_vertical = 4
custom_constants/separation = 16

[node name="HomeButton" parent="FullScreenPanel/VBoxContainer/CenteredPanel/ScrollContainer/CenterContainer/VBoxContainer/VBoxContainer/HBoxContainer" instance=ExtResource( 10 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 56.0
margin_bottom = 56.0
rect_min_size = Vector2( 56, 56 )
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource( 9 )

[node name="RetryButton" parent="FullScreenPanel/VBoxContainer/CenteredPanel/ScrollContainer/CenterContainer/VBoxContainer/VBoxContainer/HBoxContainer" instance=ExtResource( 10 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 72.0
margin_right = 128.0
margin_bottom = 56.0
rect_min_size = Vector2( 56, 56 )
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource( 8 )

[node name="Spacer4" type="Control" parent="FullScreenPanel/VBoxContainer/CenteredPanel/ScrollContainer/CenterContainer/VBoxContainer"]
margin_left = 180.0
margin_top = 629.0
margin_right = 180.0
margin_bottom = 659.0
rect_min_size = Vector2( 0, 30 )
size_flags_horizontal = 4
size_flags_vertical = 4
[connection signal="pressed" from="FullScreenPanel/VBoxContainer/CenteredPanel/ScrollContainer/CenterContainer/VBoxContainer/VBoxContainer2/DecreaseDifficultyButton" to="." method="_on_DecreaseDifficultyButton_pressed"]
[connection signal="pressed" from="FullScreenPanel/VBoxContainer/CenteredPanel/ScrollContainer/CenterContainer/VBoxContainer/VBoxContainer2/IncreaseDifficultyButton" to="." method="_on_IncreaseDifficultyButton_pressed"]
[connection signal="pressed" from="FullScreenPanel/VBoxContainer/CenteredPanel/ScrollContainer/CenterContainer/VBoxContainer/VBoxContainer/SelectLevelButton" to="." method="_on_SelectLevelButton_pressed"]
[connection signal="pressed" from="FullScreenPanel/VBoxContainer/CenteredPanel/ScrollContainer/CenterContainer/VBoxContainer/VBoxContainer/HBoxContainer/HomeButton" to="." method="_on_HomeButton_pressed"]
[connection signal="pressed" from="FullScreenPanel/VBoxContainer/CenteredPanel/ScrollContainer/CenterContainer/VBoxContainer/VBoxContainer/HBoxContainer/RetryButton" to="." method="_on_RetryButton_pressed"]
